--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <link href="styles/styles.css" rel="stylesheet" type="text/css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="javascript/jquery.js" type="text/javascript"></script>
-  <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link href ="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 
 <div class="quote-box">
+    <div class = "text-holder">
+      <h1>Random Quote Generator</h1>
+      <h2>By Kate and Rodrigo</h2>
+    </div>
+    <img class = "hero-image" src = "inspirational.jpg" ></img>
   <div class="quote-text">
     <i class="fa fa-quote-left"> </i><span id="text"></span>
   </div>
@@ -21,13 +25,10 @@
     - <span id="author"></span>
   </div>
   <div class="buttons">
-    <a class="button" id="tweet-quote" title="Tweet this quote!" target="_blank">
-      <i class="ion-social-twitter"></i>
-    </a>
-    <button class="button" id="new-quote">New quote</button>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <button class="button" id="new-quote">New Quote</button>
   </div>
 </div>
-<div class="footer"> by <a href="https://codepen.io/hezag/">hezag</a></div>
 
 
 
